tests/snapshots/execution_spec__test-http-with-mustache-const.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type A {
  a: Int
  bc: BC
}

type BC {
  d: D
  f: Boolean
}

type D {
  e: Int
}

scalar Date

scalar Email

scalar Empty

scalar JSON

scalar PhoneNumber

type Query {
  a: A
}

scalar Url

schema {
  query: Query
}
