tests/snapshots/execution_spec__test-http-with-mustache-expr.md_test_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "a": {
        "bc": {
          "d": {
            "e": 1
          },
          "f": true
        }
      }
    }
  }
}
