tests/snapshots/execution_spec__test-inline.md_client.snap
---
source: tests/execution_spec.rs
expression: merged
---
type B {
  c: String
}

type Query {
  foo: B
}

schema {
  query: Query
}
