tests/snapshots/execution_spec__test-interface-result.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type B implements IA {
  a: String
  b: String
}

scalar Date

scalar Email

scalar Empty

interface IA {
  a: String
}

scalar JSON

scalar PhoneNumber

type Query {
  bar: IA
}

scalar Url

schema {
  query: Query
}
