tests/snapshots/execution_spec__test-interface.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type B implements IA {
  a: String
  b: String
}

scalar Date

scalar Email

interface IA {
  a: String
}

scalar JSON

scalar PhoneNumber

type Query {
  bar: B
}

scalar Url

schema {
  query: Query
}
